[package]
name = "krustynative"
version = "0.1.0"
authors = ["uglyluigi <5006946+uglyluigi@users.noreply.github.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
j4rs = "0.12.0"
j4rs_derive = "0.1.0"